# dlcv-hw1

./: .gitignore  eval_best.py  main.py  plot_results.py  pyproject.toml  readme.html
results/: experiments.csv
results/hists/: activations__act-relu.pt
results/models/: activations__act-relu.pth
src/cifar10_cnn/: __init__.py  config.py  train.py
src/cifar10_cnn/factory/: model_factory.py
src/cifar10_cnn/models/: base.py
src/cifar10_cnn/modules/: base.py  module_factory.py
src/cifar10_cnn/tests/: test_base.py
src/cifar10_cnn/training/: train.py
src/cifar10_cnn/utils/: datasets.py
src/dlcv_hw1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
